# Portable-USB-Drive-Integrity-Suite

./: CONTRIBUTING.md  FAQ.txt  File Inventory  File Inventory.md  README.md  manifest.md
.github/: FUNDING.yml
installer_source/: Readme.txt  config.txt  info.txt  installer.7z
installer_source/c++/: !Readme.txt  FileListGen.rc  baselineXML_estimate.cpp  corruptor.cpp  corruptor.rc  deviceinfo.cpp  full_probe.rc  scantime_estimate.rc
installer_source/c++/par2cmdline-turbo/: AUTHORS  ChangeLog  INSTALL  README.md  ROADMAP  automake.sh  config.h.in  configure.ac  par2cmdline.props  par2cmdline.sln  par2cmdline.vcxproj  par2cmdline.vcxproj.filters  request to the creator.txt
installer_source/c++/par2cmdline-turbo-mod/: !BuildNotes.txt
installer_source/c++/par2cmdline-turbo-mod/m4/: acx_pthread.m4  ax_cxx_compile_stdcxx.m4
installer_source/c++/par2cmdline-turbo-mod/src/: commandline.cpp  commandline.h  commandline_cpp.dif  commandline_test.cpp  crc.cpp  creatorpacket.cpp  criticalpacket.cpp  criticalpacket.h  criticalpacket_test.cpp  datablock.h  descriptionpacket.cpp  descriptionpacket.h  diskfile.h  foreach_parallel.h  galois.cpp  letype_test.cpp  libpar2.h  libpar2internal.h  mainpacket.cpp  md5.cpp  md5.h  md5_test.cpp  par1fileformat.h  par1repairersourcefile.cpp  par2creator.cpp  par2creator.h  par2creatorsourcefile.cpp  par2fileformat.h  par2repairer.cpp  recoverypacket.cpp  recoverypacket.h  reedsolomon_test.cpp  utf8.h  verificationhashtable.h  verificationpacket.cpp  verificationpacket.h
installer_source/c++/par2cmdline-turbo-mod/x64/Release/libpar2/libpar2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libpar2.lastbuildstate
installer_source/c++/par2cmdline-turbo/man/: par2.1
installer_source/c++/par2cmdline-turbo/parpar/gf16/: controller.cpp  controller.h  controller_cpu.cpp  controller_cpu.h  controller_ocl.cpp  controller_ocl.h  controller_ocl_init.cpp  gf16_affine.h  gf16_affine2x_x86.h  gf16_affine_avx10.c  gf16_affine_avx10.h  gf16_affine_avx2.c  gf16_affine_avx512.c  gf16_affine_gfni.c  gf16_bitdep_init_avx2.h  gf16_bitdep_init_sse2.h  gf16_checksum_arm.h  gf16_checksum_generic.h  gf16_checksum_rvv.h  gf16_checksum_sve.h  gf16_checksum_x86.h  gf16_cksum.h  gf16_cksum_avx2.c  gf16_cksum_avx512.c  gf16_cksum_base.h  gf16_cksum_generic.c  gf16_cksum_neon.c  gf16_cksum_rvv.c  gf16_cksum_sse2.c  gf16_cksum_sve.c  gf16_cksum_x86.h  gf16_clmul.h  gf16_clmul_neon.c  gf16_clmul_neon.h  gf16_clmul_neon_base.h  gf16_clmul_rvv.c  gf16_clmul_rvv.h  gf16_clmul_sha3.c  gf16_clmul_sve2.c  gf16_clmul_sve2.h  (+16 more)
installer_source/c++/par2cmdline-turbo/src/: commandline - Copy.cpp  crc.h  crc_test.cpp  creatorpacket.h  datablock.cpp  descriptionpacket_test.cpp  diskfile.cpp  diskfile_test.cpp  filechecksummer.cpp  filechecksummer.h  galois.h  galois_test.cpp  hasher.h  info.txt  letype.h  libpar2.cpp  libpar2_test.cpp  mainpacket.h  par1fileformat.cpp  par1repairer.cpp  par1repairer.h  par1repairersourcefile.h  par2cmdline.cpp  par2creatorsourcefile.h  par2fileformat.cpp  par2repairer.h  par2repairersourcefile.cpp  par2repairersourcefile.h  reedsolomon.cpp  reedsolomon.h  utf8.cpp  utf8_test.cpp  verificationhashtable.cpp
installer_source/c++/par2cmdline-turbo/tests/: build_unit_tests.ps1  commandline_test.vcxproj  crc_test.vcxproj  criticalpacket_test.vcxproj  descriptionpacket_test.vcxproj  diskfile_test.vcxproj  galois_test.vcxproj  letype_test.vcxproj  libpar2_test.vcxproj  md5_test.vcxproj  reedsolomon_test.vcxproj  run_tests.ps1  test1  test1.ps1  test10  test10.ps1  test11  test11.ps1  test12  test12.ps1  test13  test13.ps1  test14  test14.ps1  test15  test15.ps1  test16  test16.ps1  test17  test17.ps1  test18  test18.ps1  test19  test19.ps1  test2  test2.ps1  test20  test20.ps1  test21  test21.ps1  (+49 more)
installer_source/c++/src/: FileListGen.cpp  baselineXML_estimate.rc  compile.bat  corruptor.cpp  corruptor.rc  deviceinfo.cpp  deviceinfo.rc  full_probe.cpp  full_probe.rc  scantime_estimate.cpp  scantime_estimate.rc  sign_all.bat  surface_scan.cpp  surface_scan.rc
installer_source/files/: !VERIFY_INTEGRITY.BAT  Drive_Status.xml  Help.txt  Readme.txt  install.bat  manifest.md
installer_source/files/logs/: logs.txt
installer_source/files/scripts/: create_baselineXML.ps1  create_recovery.ps1  full_surface_scan.bat  generate_report.ps1  pager.ps1  pshell.bat  quick_file_check.ps1  quick_surface_scan.bat
